# DiagramIR

./: .env.example  .gitignore  IR_model.py  LICENSE  README.md  backtranslation.py  evaluator.py  llm_judge.py  llm_judge_schema.py  models.py  prompt_llmasjudge_imageonly.txt  prompts.py  pyproject.toml
data/: calib_set_consensus.csv  geometric_shapes_IRR_consensus.csv  geometric_shapes_test_set.csv  human_ratings.csv  rebecca_geometric_shapes_test_set.csv  shubhra_geometric_shapes_test_set.csv  vishal_geometric_shapes_test_set.csv
notebooks/: backtranslation_analysis.ipynb  backtranslation_evaluation.ipynb  filter_coteach_visuals_to_test_set.ipynb  llm_judge_evaluation.ipynb
results/backtranslation/: evaluation_results_gpt-4.1-mini_20250924.csv  evaluation_results_gpt-4.1-mini_20260219.csv  evaluation_results_gpt-4.1_20250924.csv  evaluation_results_gpt-5-mini_20250924.csv  evaluation_results_gpt-5_20250924.csv
results/llm_judge/: evaluation_results_both_gpt-4.1-mini_20260218.csv  evaluation_results_both_gpt-4.1_20260218.csv  evaluation_results_both_gpt-5-mini_20260218.csv  evaluation_results_both_gpt-5_20260218.csv
scripts/: precompute_judge_pngs.py
utils/: __init__.py  geometry_engine.py  openai_judge.py  prompt_llmasjudge_both.md  prompt_llmasjudge_codeonly.md  prompts.py
utils/prompts/: prompt_backtranslation.md  prompt_llmasjudge_both.md  prompt_llmasjudge_codeonly.md  prompt_llmasjudge_imageonly.md
